pass through for the easy syntactic errors pointed out in the reviews. this closes #8.

--- a/formally.tex
+++ b/formally.tex
@@ -250,7 +250,7 @@ specifically for this case:
   \hana{\hGamma}{\hlam{x}{\hexp}}{\tehole}
 }
 \end{equation*}
-Intead, we combine these two possible rules into a single rule through the
+Instead, we combine these two possible rules into a single rule through the
 simple auxiliary \emph{matched arrow type} judgement,
 $\arrmatch{\htau}{\tarr{\htau_1}{\htau_2}}$, defined in Figure
 \ref{fig:type-consistency}. This judgement leaves arrow types alone and
