--- a/hazelnut-popl17.tex
+++ b/hazelnut-popl17.tex
@@ -202,7 +202,7 @@ Introduction. One apparent exception is Unison~\cite{unison}, a structure
 editor for a typed functional language similar to Haskell. Like Hazelnut,
 it seems to define some notion of well-typedness for expressions with holes
 (though there is no technical documentation on virtually any aspect of its
-design.) Unlike Hazelnut, it does not have a notion analagous to Hazelnut's
+design.) Unlike Hazelnut, it does not have a notion analogous to Hazelnut's
 notion of a non-empty hole. As such, programmers must construct programs in
 a rigid outside-in manner, as discussed in Sec. \ref{sec:example}. Another
 system with the same problem is Polymorphic Blocks, a block-based user
@@ -262,7 +262,7 @@ Gradualizer, operates on a logic program that specifies a simple type
 assignment system with some additional annotations to generate a
 corresponding specification of a gradual type system. The authors leave
 support for working with bidirectional type systems as future work. This
-suggests the possibility of an analagous ``Editorializer'' that generates a
+suggests the possibility of an analogous ``Editorializer'' that generates a
 specification of a typed structure editor from a simple language
 definition. Our exposition in Sec. \ref{sec:extending} certainly suggests
 that many of the necessary definitions follow seemingly mechanically from
