--- a/intro.tex
+++ b/intro.tex
@@ -21,7 +21,7 @@ not contain enough information to determine the exact percentage.)  Some of
 these meaningless edit states arose because the programmer was in the midst
 of a sequence of edits that left the edit state transiently meaningless,
 while others arose because the programmer made a logical mistake. Because
-the language definitions is silent about these edit states, it is difficult
+the language definition is silent about these edit states, it is difficult
 to design useful editor services, e.g. syntax
 highlighting~\cite{sarkar2015impact}, type-aware code
 completion~\cite{Mooty:2010:CCC:1915084.1916348,Omar:2012:ACC:2337223.2337324},
